# dbt-mds

./: README.md
songs_dbt/: movies.json  pyproject.toml
songs_dbt/imdb_etl/: README.md  setup.py
songs_dbt/imdb_etl/quickstart_etl.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
songs_dbt/imdb_etl/quickstart_etl/assets/: movies_imdb.py
songs_dbt/imdb_etl/quickstart_etl/external_api/: imdb.py
songs_dbt/imdb_etl/quickstart_etl/imdb_dbt/: .user.yml  database.duckdb  dbt_project.yml
songs_dbt/imdb_etl/quickstart_etl/imdb_dbt/config/: .user.yml  profiles.yml
songs_dbt/imdb_etl/quickstart_etl/imdb_dbt/models/: sources.yml
songs_dbt/imdb_etl/quickstart_etl/imdb_dbt/models/imdb_analysis/: movies_stats.sql  schema.yml
songs_dbt/imdb_etl/tmpi3clzus4/history/: runs.db
songs_dbt/imdb_etl/tmpi3clzus4/history/runs/: index.db
songs_dbt/imdb_etl/tmpi3clzus4/schedules/: schedules.db
songs_dbt/songs/: .user.yml  dbt_project.yml  profiles.yml
songs_dbt/songs/duck/: database.duckdb
songs_dbt/songs/models/separate/: hit_list_combined.sql  longest_consec.sql  one_hit_wonders.sql  song_daily_stats.sql  songs_stats.sql
songs_dbt/songs/models/window_solution/: hit_list.sql
songs_dbt/songs/seeds/: songs.csv
