[tool.poetry]
name = "songs-dbt"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "songs_dbt"}]

[tool.poetry.dependencies]
python = "^3.9"
dbt-duckdb = "^1.4.0"
duckdb = "^0.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
